# CPU-Benchmark

./: README.md
CPUBenchmark_source/: CMakeLists.txt  cacheinfo.h  chartFactory.cpp  chartFactory.h  cpuidentification.cpp  cpuidentification.h  cpuidwindow.cpp  cpuidwindow.h  cpuidwindow.ui  encrDecr.cpp  encrDecr.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mandelbrot.cpp  mandelbrot.h  mandelbrotwidget.cpp  mandelbrotwidget.h  memAccess.cpp  memAccess.h  memTransfer.cpp  memTransfer.h  pcGrader.cpp  pcGrader.h  progress.h  rcdencrdecr.cpp  rcdencrdecr.h  rcdencrdecr.ui  rcdmandelbrot.cpp  rcdmandelbrot.h  rcdmandelbrot.ui  rcdmemaccess.cpp  rcdmemaccess.h  rcdmemaccess.ui  rcdmemtransfer.cpp  rcdmemtransfer.h  rcdmemtransfer.ui  rcdpcgrader.cpp  rcdpcgrader.h  rcdpcgrader.ui  (+15 more)
